# cursed-text-editor

./: .gitignore  Cargo.toml  README.md
src/: editor_view.rs  main.rs
