[package]
name = "cte"
version = "0.1.0"
authors = ["gudmunduro <goh00@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["pancurses-backend"]